Fix; Lesser width to avoid scrollbars

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
         }
 
         #contentWrapper {
-            width: 800px;
+            width: 780px;
             overflow-x: hidden;
 
         }
@@ -43,7 +43,6 @@
 			line-height: 31px;
 		}
 		.contact {
-			width: 781px;
 			height: 255px;
    			margin: 12px;
     		border: 1px solid gray;
